redhat-director-scripts/monitoring-openshift/sql_exporter/sql-exporter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sql-exporter
  namespace: trilio-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sql-exporter
  template:
    metadata:
      labels:
        app: sql-exporter
    spec:
      containers:
        - name: sql-exporter
          image: docker.io/burningalchemist/sql_exporter:latest
          args:
            - "-config.file"
            - "/config/config.yml"
          ports:
            - name: metrics
              containerPort: 9399
          volumeMounts:
            - name: config
              mountPath: /config/config.yml
              subPath: config.yml
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: sql-exporter-config
