redhat-director-scripts/monitoring-openshift/sql_exporter/sql-exporter-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sql-exporter
  namespace: trilio-monitoring
spec:
  to:
    kind: Service
    name: sql-exporter
  port:
    targetPort: 9399
  tls:
    termination: edge
